# CodeBrowser

./: .gitignore  CMakeLists.txt  README.md  clear.sh  format.sh  lsp-client.pro  old-hover.txt  run.bash
crow/crow/: socket_adaptors.h
root/: annotate-v1.html  annotate.html  diff.html  editor.html  folders.html  history-file.html  history-folder.html  history.html  index.html  memoization_editor.html  old_editor.html  old_history-file.html  old_history-folder.html  old_search.html  search.html  tmp.html
root/files/: config-api-v1.json  editor.main.css  jquery-1.4.4.min.js  jquery.min.js  new-style.css  new_style.css  new_utils.js  searchable-option-list-2.0.14.min.js  style.css  utils-0.0.39.min.js  utils.js
root/new/: history-v1.html  history.html  index.html  old_history.html  seach.html
sol/: config.hpp  forward.hpp  minilua.h  sol.hpp
work/: CMakeLists.txt  ConstStrings.h  FileInfo.h  FullTextIndexer.cpp  FullTextIndexer.h  FullTextSearcher.cpp  FullTextSearcher.h  Git.cpp  Git.h  LSMessage.h  PipeAdapter.cpp  PipeAdapter.h  PipeCommand.h  Search.h  SearchFile.h  SearchInfo.h  SearchLine.h  Server.cpp  Server.h  Task.cpp  Utils.cpp  Utils.h  lsp-client.pro.user.159c1eb  main.cpp
